[package]
name = "cachers"
version = "0.1.0"
authors = ["ikeikeikeike <jp.ne.co.jp@gmail.com>"]
edition = "2018"
exclude = ["/.gitignore", ".cargo/config"]
homepage = "https://github.com/ikeikeike/cachers"
keywords = ["fast", "cache", "python"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/ikeikeike/cachers"

[package.metadata.maturin]
classifier = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]


[dependencies]
from_variants = "0.5.0"
indexmap = "1.6.1"
itertools = "0.10.0"
mimalloc = { version = "0.1.24", default-features = false }
once_cell = "1.5.2"
pyo3 = "0.13.2"
rustc-hash = "1.1.0"
strum_macros = "0.20.1"


[lib]
name = "cachers"
crate-type = ["cdylib"]  # "rlib"


[features]
default = ["pyo3/extension-module"]


# [workspace]
# members = [ "profiling" ]


[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3


